--- a/scss/home.scss
+++ b/scss/home.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   padding: 30px 10% 0% 10%;
   overflow: hidden;
+  position: relative;
 
   // Print Statement Container
   .print-statement-container {
